working login to reg to preferences pages

--- a/client/static/partials/register.html
+++ b/client/static/partials/register.html
@@ -26,7 +26,7 @@
 					<input type="date" name="dob" max="{{minAge | date:'yyyy-MM-dd'}}" ng-model='user.dob'</input>
 				</p>
 				<p>
-					<button ng-click='submit'>Register</button>
+					<button>Continue</button>
 				</p>
 				
 			</fieldset>
