--- a/client/static/partials/login.html
+++ b/client/static/partials/login.html
@@ -1,21 +1,16 @@
-<div ng-controller='userController'>
-	<form ng-submit="login(loginUser)>
-		<fieldset>
-			<legend> Login</legend>
-			<p>
-				<label for="email">Email:</label>
-				<input type="text" ng-model='user.email'name="email" id="email">
-			</p>
-			<p>
-				<label for="password">Password</label>
-				<input type="password" ng-model='user.password' name="password" id="password">
-			</p>
-			<p>
-				<button ng-click='login(user)'>Login</button>
-			</p>
-		</fieldset>
+<div class="row" ng-controller='userController'>
+		<form class="form-signin pull-right" ng-submit="login(loginUser)">
+		<!-- <h2 class="form-signin-heading">Please sign in</h2> -->
+		<label for="inputEmail" class="sr-only">Email address</label>
+		<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" ng-model='user.email'>
+
+		<label for="inputPassword" class="sr-only">Password</label>
+		<input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" ng-model='user.password'>
+		<div class="checkbox">
+			<label>
+				<p>Not a member?<a href="#/register"> <i class="em em-cupid"></i> Register</a></p>
+			</label>
+		</div>
+		<button class="btn btn-lg btn-danger btn-block" ng-click='login(user)'>Sign in</button>
 	</form>
-	<div ng-repeat='error in err'>
-	<p>{{error}}</p>
-	</div>
 </div>
