--- a/client/static/partials/register.html
+++ b/client/static/partials/register.html
@@ -1,4 +1,4 @@
-<div ng-controller='userController'>
+<!-- <div ng-controller='userController'>
 <h1>Welcome</h1>
 		
 		<form ng-submit="create(user)">
@@ -31,5 +31,31 @@
 				
 			</fieldset>
 		</form>
-</div>
+	</div> -->
+	<!-- container  testing -->
+	<div class="row" ng-controller='userController'>
 
+		<form class="form-signin pull-right" ng-submit="create(user)">
+			<!-- <h2 class="form-signin-heading">Register</h2> -->
+			<label for="inputName" class="sr-only">Name</label>
+			<input type="email" id="inputName" class="form-control" placeholder="Name" required="" autofocus="" ng-model='user.name'>
+
+			<label for="inputEmail" class="sr-only">Email address</label>
+			<input type="email" id="inputEmail" class="form-control" placeholder="Email address" required="" autofocus="" ng-model='user.email'>
+
+			<label for="inputPassword" class="sr-only">Password</label>
+			<input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" ng-model='user.password'>
+
+			<label for="inputPassword" class="sr-only">Password Confirmation</label>
+			<input type="password" id="inputPassword" class="form-control" placeholder="Password" required="" ng-model='user.confirm_password'>
+
+			<label class="sr-only" for="dob">Date of Birth:</label>
+			<input class="form-control" id="dob" type="date" name="dob" max="{{minAge | date:'yyyy-MM-dd'}}" ng-model='user.dob'>
+			<div class="checkbox">
+				<label>
+					<p>Already a member? <a href="#/login"><i class="em em-heartbeat"></i> LOGIN</a></p>
+				</label>
+			</div>
+			<button class="btn btn-lg btn-danger btn-block" ng-click='login(user)'>REGISTER</button>
+		</form>
+	</div>
