--- a/client/static/partials/search.html
+++ b/client/static/partials/search.html
@@ -1,66 +1,73 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="utf-8">
-	<title>Login / Registration</title>
+    <meta charset="UTF-8">
+    <title>Whats's Up</title>
+    <style type="text/css">
+        #add{ width: 300px; display: inline-block;}
+        label{display:inline-block; width: 130px;} 
+        h1{width:700px; display: inline-block;}
+        .right{float: right;}
+        a{text-decoration: none; margin-top: 20px;}
+        table {
+            width: 800px;
+            margin: 20px 50px 0 50px;
+            border-collapse: collapse;
+            border:1px solid black;
+        }
+        table, th, td {
+            border-right: 1px solid black;
+            height: 30px;
+            padding-left: 5px;
+            margin-bottom: 20px;
+        }
+        th {background: #CCC}
+        tr:nth-child(even) {background: #EAEAEA }
+        tr:nth-child(odd) {background: #FFF}
+    </style>
 </head>
-<style type="text/css">
-	/**{margin: 0; padding: 0;	}*/
-	#register{ width: 300px; display: inline-block;}
-	#login{ width: 300px; display: inline-block; margin-left: 100px; vertical-align: top;}
-	label{display:inline-block; width: 130px;} 
-</style>
+<div ng-controller='searchController'>
 <body>
-	<div id="container">
-		<h1>Welcome</h1>
-		
-		<form action="users/register" method="post" id="register">
-			<fieldset>
-				<legend>Register</legend>
-				<p>
-					<label for="name">Name:</label>
-					<input type="text" name="name" id="name">
-				</p>
-				<p>
-					<label for="email">Email:</label>
-					<input type="text" name="email" id="email">
-				</p>
-				<p>
-					<label for="passsword">Password:</label>
-					<input type="password" name="password" id="password">
-				</p>
-
-				<p>
-					<label for="confirm_password">Confirm password:</label>
-					<input type="password" name="confirm_password" id="confirm_password">
-				</p>
-				<p>
-					<label for="dob">Date of Birth:</label>
-					<input type="date" name="dob" max="<?php echo date("Y-m-d"); ?></input>
-				</p>
-				<p>
-					<button>Register</button>
-				</p>
-				
-			</fieldset>
-		</form>
-
-		<form action="users/login" method="post" id="login">
-			<fieldset>
-				<legend> Login</legend>
-				<p>
-					<label for="email">Email:</label>
-					<input type="text" name="email" id="email">
-				</p>
-				<p>
-					<label for="passsword">Password</label>
-					<input type="password" name="password" id="password">
-				</p>
-				<p>
-					<button>Login</button>
-				</p>
-			</fieldset>
-		</form>
-
-	</body>
-	</html>
+    <header>
+        <h1>Hello, {{current_user.name}}</h1>
+        <a class="right" href="/users/logout">Can you please gently Logout</a>
+    </header>
+    <main>
+        <h4>Here are users in your area</h4>
+        <table id="localProfiles">
+            <tr>
+                <th>Photo</th>
+                <th>Bio</th>
+                <th>Location</th>
+                <th>Action</th>
+            </tr>
+            <tr ng-repeat="user in users.data">
+                <td>IMAGE & {{user.name}}</td>
+                <td>{{user.bio}}</td>
+                <td>{{user.city}}, {{user.state}}</td>
+                <td><a href="#profile/:id>">Check out {{user.name}}</a>                   
+                </td>
+            </tr>
+        </table>
+        <hr>
+        
+        <h4>List of users in other city</h4>
+        <table id="profiles">
+            <tr>
+                <th>Photo</th>
+                <th>Bio</th>
+                <th>Location</th>
+                <th>Action</th>
+            </tr>
+            <tr ng-repeat="user in user.data">
+                <td>IMAGE & {{user.name}}</td>
+                <td>{{user.bio}}</td>
+                <td>{{user.city}}, {{user.state}}</td>
+                <td><a href="#profile/:id>">Check out {{user.name}}</a>
+                </td>
+            </tr>
+        </table>        
+    </main>   
+</body>
+</div>
+</html>
